# erpnext_mz

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  MOZAMBIQUE_WORKSPACES_DESIGN.md  PRINT_FORMAT_IMPROVEMENTS.md  PRINT_FORMAT_PREPARATION.md  PRINT_FORMAT_ROADMAP.md  README.md  Relatorio_ERPNext_Mocambique_2025.md  TEMPLATE_SYNTAX_FIX.md  check_notifications_simple.py  fix_public_folder_state.py  pyproject.toml  roadmap.md  sites-available
erpnext_mz/: DEPLOYMENT_CHECKLIST.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  EMAIL_NOTIFICATION_SOLUTION.md  QUICK_START.md  README.md  __init__.py  api.py  app.json  check_notification_email.py  check_notifications_simple.py  create_dashboards_from_json.py  create_workspace_from_json.py  deploy_docker.sh  desk_page.py  diagnose_email_notifications.py  hooks.py  install.py  manual_trigger_notification.py  modules.txt  mozambique_dashboad.json  mozambique_workspaces.json  overrides.py  permissions.py  pyproject.toml  requirements.txt  reset_public_folder.py  setup.py  tasks.py  test_app.py  test_days_after_notification.py  utils.py
erpnext_mz/api/: __init__.py
erpnext_mz/chart_of_accounts/: __init__.py  mozambique_coa.json
erpnext_mz/commands/: __init__.py
erpnext_mz/doctypes/: __init__.py
erpnext_mz/fixtures/: currency.json  custom_field.json  dashboard.json  dashboard_chart.json  document_naming_rule.json  document_naming_settings.json  income_tax_slab.json  item_tax_template.json  module_def.json  number_card.json  payroll_settings.json  print_format.json  property_setter.json  workspace.json  (+2 more)
(+102 files in other folders)
