[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext_mz"
version = "1.0.0"
description = "ERPNext Mozambique clean skeleton (SAF-T generator only)"
authors = [{name = "ERPNext Mozambique Team", email = "support@erpnextmz.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://erpnextmz.com"
