[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "erpnext_mz"
version = "1.0.0"
description = "Mozambique localization for ERPNext (SAF-T, VAT, HR/Payroll)"
authors = [{name = "ERPNext Mozambique Team", email = "support@erpnextmz.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "xmltodict>=0.13",
  "lxml>=4.9",
]

[project.urls]
Homepage = "https://erpnextmz.com"
